--- a/SpringChat/springchat/src/main/resources/templates/home.html
+++ b/SpringChat/springchat/src/main/resources/templates/home.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 	<h1>Welcome!</h1>
+	<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
 	<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+	
+	<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Logout" />
+</form>
 </body>
 </html>
