reparation users/all

--- a/SpringChat/springchat/src/main/resources/templates/error.html
+++ b/SpringChat/springchat/src/main/resources/templates/error.html
@@ -7,6 +7,6 @@
 <body>
 		<h1>Error occurred</h1>
 		<h2>Please contact website admin</h2>
-		<a href="/">Home</a>
+		<a href="/home">Home</a>
 </body>
 </html>
