--- a/SpringChat/springchat/src/main/resources/templates/home.html
+++ b/SpringChat/springchat/src/main/resources/templates/home.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="https://www.thymeleaf.org"
-	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<link href="/css/main.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-	<h1>Welcome!</h1>
-	<h3 th:inline="text">Welcome<b th:inline="text" id="name"> [[${#httpServletRequest.remoteUser}]] </b> </h3>
-	<p>Click <a th:href="@{/chat}">here</a> to see a greeting.</p>
-	
-	<form th:action="@{/logout}" method="post">
-    <button type="submit" value="Logout">logout</button>
-</form>
+<html>
+  <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+      <title>Welcome to Spring Boot Chat Application</title>
+      <link rel="stylesheet" href="/css/main.css" />
+  </head>
+  <body>
+    <noscript>
+      <h2>Sorry! Your browser doesn't support Javascript</h2>
+    </noscript>
 
-</body>
+    <div id="username-page">
+        <div class="username-page-container">
+            <h1 class="title">Entrez votre pseudo pour le channel</h1>
+            <form id="usernameForm" name="usernameForm">
+                <div class="form-group">
+                    <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="accent username-submit">Go !!</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div id="chat-page" class="hidden">
+        <div class="chat-container">
+            <div class="chat-header">
+                <h2>Bienvenue sur le channel public</h2>
+            </div>
+            <div class="connecting">
+                Connecting...
+            </div>
+            <ul id="messageArea">
+
+            </ul>
+            <form id="messageForm" name="messageForm">
+                <div class="form-group">
+                    <div class="input-group clearfix">
+                        <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+                        <button type="submit" class="primary">Envoyer</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script src="/js/main.js"></script>
+  </body>
 </html>
